# public-opinion-agent-eval

./: .dockerignore  .env.example  .gitignore  ASSET_MANIFEST.md  DATA_CARD.md  Dockerfile  README.md  SECURITY.md  UPSTREAM.md  pyproject.toml  requirements.txt
dictionaries/: 否定词_融合版.txt
docs/: AGENT_EVALUATION.md  ARCHITECTURE.md  DECISIONS.md  EVALUATION.md  LIVE_LLM_REVIEWER_EVAL.md  MCP_DEMO.md  PUBLIC_RELEASE_CHECKLIST.md  REVIEWER_GATE_DEMO.md  REVIEWER_POLICY_VALIDATION_PROTOCOL.md  REVIEWER_POLICY_VALIDATION_RESULTS.md  TRANSFORMER_SENTIMENT_V1.md
examples/: demo_event_cards.jsonl  mcp_analyze_event_call.json  mcp_initialize.json  reviewer_gate_demo.json
scripts/: apply_adjudication_corrections.py  audit_agent_run.py  audit_data.py  build_adjudication_queue.py  build_agent_eval_tasks.py  build_event_cards.py  build_public_demo_cases.py  build_reviewer_eval_cases.py  check_release_readiness.py  create_annotation_batch.py  demo_reviewer_gate.py  evaluate_agent_mvp.py  evaluate_baselines.py  evaluate_failure_recovery.py  evaluate_llm_reviewer.py  evaluate_reliability.py  evaluate_retrieval.py  evaluate_reviewer_policy.py  export_transformer_dataset.py  import_adjudication_results.py  run_mvp.py  run_public_demo.py  smoke_test_api.py  train_transformer_sentiment.py  tune_review_policy.py
tests/: test_adjudication.py  test_adjudication_corrections.py  test_adjudication_results.py  test_agent_contracts.py  test_agent_nodes.py  test_agent_run_audit.py  test_api.py  test_briefing_composer.py  test_data_pipeline.py  test_evaluate_llm_reviewer_script.py  (+15 more)
(+73 files in other folders)
